@startuml


Tegnbar <|.. Rektangel
Figur <|-- Sirkel
Figur <|-- Rektangel
Rektangel <|-- Kvadrat

interface Tegnbar {
    + tegn(): void
}

abstract class Figur {
    - farge: String
    {static} - CM_TIL_METER: int
    {abstract} + areal(): double
    {abstract} + omkrets(): double
    + arealIMeter(): double
    + omkretsIMeter(): double
    + erStorre(annenFigur: Figur): boolean
    + {static} erStorre(figur1: Figur, figur2: Figur): boolean
}

class Sirkel {
    + omkrets(): double
    + beregnDiameter(): double
}

class Rektangel {
    - side1: double
    - side2: double
}

class Kvadrat {
    - side: double
}

@enduml